--- a/modules/coverage-reports/pom.xml
+++ b/modules/coverage-reports/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>dpx-services</artifactId>
         <groupId>com.ibm.cloud</groupId>
-        <version>0.1.0</version>
+        <version>v0.1.0</version>
         <relativePath>../..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
