--- a/modules/common/pom.xml
+++ b/modules/common/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>dpx-services</artifactId>
         <groupId>com.ibm.cloud</groupId>
-        <version>v0.1.0</version>
+        <version>99-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
 
