fix: review changes
Signed-off-by: Aarush Singh <Aarush.Singh@ibm.com>

--- a/modules/coverage-reports/pom.xml
+++ b/modules/coverage-reports/pom.xml
@@ -35,7 +35,7 @@
         <!-- Copy and update this section for each service added to the project. -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>data-product-services</artifactId>
+            <artifactId>dpx</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
