--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -23,7 +23,7 @@
             below should reflect the "artifactId" value specified in each module's pom.xml file (i.e. not the module's directory name). -->
         <dependency>
             <groupId>com.ibm.cloud</groupId>
-            <artifactId>data-product-services</artifactId>
+            <artifactId>dpx</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
